# Sim3

./: .gitignore  CMakeLists.txt  main.c
GUI/: Bench.c  Bench.h  Drawables.c  Drawables.h  GUI.c  GUI.h  Grid.c  Grid.h  Input.c  Input.h  Statusbar.c  Statusbar.h
GUI/Drawables/: Chip.c  Chip.h  FixedContact.c  FixedContact.h  LED.c  LED.h  Wire.c  Wire.h  WireBranchingPoint.c  WireBranchingPoint.h
GUI/Lib/: clay.c  clay.h  clay_renderer_raylib.c  clay_renderer_raylib.h
GUI/Menu/: Menu.c  Menu.h
Resources/: chips.json
Resources/Scripts/: 74LS00.lua  74LS02.lua  74LS161.lua
Resources/Scripts/Lib/: MessagePack.lua  base.lua
Resources/Scripts/Stateful/: 74LS162.lua
Resources/Scripts/Stateless/: 74LS00.lua  74LS02.lua  74LS04.lua  74LS08.lua  74LS32.lua  74LS48.lua  CLOCK.lua
Saves/: decade_counters_seven_segments.s3  decade_counters_seven_segments_clocked.s3  temp.s3
Sim/: SaveAndLoad.c  SaveAndLoad.h  SimulationResources.c  SimulationResources.h  SimulationSpace.c  SimulationSpace.h
Sim/Components/: Chip.c  Chip.h  ChipSpec.h  ChipSpecEnums.h  Connection.c  Connection.h  ConnectionPoint.c  ConnectionPoint.h  ConnectionPointList.c  FixedContact.c  FixedContact.h  LED.c  LED.h  WireList.c
Sim/Json/: AppData.c  AppData.h  AppDataRecentRecord.c  Deserialization.c  Serialization.c
Sim/SimLists/: SimspaceLists.c  SimspaceLists.h
